@@ -28,12 +28,6 @@ is $collection->build_index_name(bson_doc(foo => 1, 'bar.baz' => -1)),
 is $collection->build_index_name(bson_doc(foo => 1, bar => -1, baz => '2d')),
   'foo_bar_baz', 'right index name';
 
-# Write concern
-my $mango2  = Mango->new->w(2)->wtimeout(5000);
-my $concern = $mango2->db('test')->collection('test')->build_write_concern;
-is $concern->{w},        2,    'right w value';
-is $concern->{wtimeout}, 5000, 'right wtimeout value';
-
 # Insert documents blocking
 my $oids = $collection->insert([{foo => 'bar'}, {foo => 'baz'}]);
 isa_ok $oids->[0], 'Mango::BSON::ObjectID', 'right class';
